<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Contacts History</string>
    <string name="app_version" translatable="false">v1.0.2</string>
    <string name="app_cr_text" translatable="false">© 2018 POP SOFTWARE</string>

    <string name="notification_main">Service is running</string>
    <string name="notification_new">New contact created</string>

    <string name="action_settings">Settings</string>

    <string name="label_activity_settings">Settings</string>
    <string name="label_activity_delete">Remove</string>
    <string name="label_activity_tutorial">Tutorial</string>
    <string name="label_activity_about">About</string>

    <!-- Strings used in UI - Tab names, Dialogues, ... -->

    <string name="tab_recent">Recent</string>
    <string name="tab_today">Today</string>
    <string name="tab_week">This week</string>
    <string name="tab_month">This month</string>
    <string name="tab_date">Date</string>
    <string name="tab_twodates">Two dates</string>
    <string name="tab_location">Location</string>

    <string name="warning_install_title">Application must be installed in system memory</string>
    <string name="warning_install_text">Please change install location in app info screen.</string>
    <string name="warning_install_positive_btn">Change now</string>
    <string name="warning_install_neutral_btn">Change later</string>


    <string name="warning_location_title">Location discovery not enabled</string>
    <string name="warning_location_text">Please change privacy setting to permit access to location.</string>
    <string name="warning_location_positive_btn">Change now</string>
    <string name="warning_location_neutral_btn">Change later</string>


    <string name="warning_conn_title">No Internet connection</string>
    <string name="warning_conn_text">Location will not be discovered. Connect to the Internet through WiFi or mobile data.</string>
    <string name="warning_conn_positive_btn">WiFi</string>
    <string name="warning_conn_negative_btn">Mobile Data</string>
    <string name="warning_conn_neutral_btn">Change later</string>

    <string name="info_date_firstline">Pick a date for which you</string>
    <string name="info_date_secondline">want to see contacts</string>

    <string name="info_two_dates_firstline">Pick two dates for which you</string>
    <string name="info_two_dates_secondline">want to see contacts</string>

    <string name="info_location_firstline">Type a location</string>
    <string name="info_location_secondline">to filter contacts by.</string>

    <string name="button_pick_date">Pick date…</string>
    <string name="button_pick_first_date">Start date</string>
    <string name="button_pick_second_date">End date</string>
    <string name="button_done">Display list</string>

    <string name="title_pick_date">Pick date</string>

    <string name="button_close_search">Close</string>

    <string name="rem_close">Close</string>
    <string name="rem_delete">Delete</string>
    <string name="rem_select_all">Select all</string>
    <string name="rem_info">Contacts were removed from Contacts History. They haven\'t been removed from your Contacts Book. </string>

    <string name="err_no_info">Can\'t find this contact</string>

    <string name="location_hint">Search location</string>

    <string name="search_hint">Search name, date or location</string>

    <!-- Strings used in Menus-->

    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_name">By name</string>
    <string name="menu_sort_by_date">By date</string>
    <string name="menu_sort_by_location">By location</string>
    <string name="menu_display">Display</string>
    <string name="menu_display_withlocation">Only contacts with location</string>
    <string name="menu_display_all">All contacts</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_help_tutorial">Tutorial</string>
    <string name="menu_help_about">About</string>

    <!-- Strings used in ContactHelper and GetListHelper Classes-->

    <string name="str_info_getbothdates">Pick both dates!</string>

    <string name="helper_nolocation">No location</string>


    <!-- Strings used in Service Class-->

    <string name="service_icon_firstline">Contacts History is working</string>
    <string name="service_icon_secondline">"Touch to open"</string>

    <string name="service_icon_contact">Added contact</string>

    <string name="service_no_location">Location could not be found.</string>
    <string name="service_no_connexion">No Internet connection.</string>


    <!-- Strings used in Setting Activityes -->

    <string name="setting_category_display">Display settings</string>
    <string name="setting_category_contacts">Contacts</string>
    <string name="setting_category_notifications">Notifications</string>

    <string name="setting_source_internal">Internal memory</string>
    <string name="setting_source_internal_summary">Contacts that are stored in device\'s internal memory.</string>

    <string name="setting_source_sim">SIM</string>
    <string name="setting_source_sim_summary">Contacts stored om SIM card</string>

    <string name="setting_source_other">Other</string>
    <string name="setting_source_other_summary">Other accounts (Google, Facebook, Yahoo, …)</string>


    <string name="setting_write_info">Write data in contact</string>
    <string name="setting_write_info_summary">Write date and location in "Notes" field of contact, to be reused when importing contacts</string>

    <string name="setting_read_info">Read data when importing</string>
    <string name="setting_read_info_summary">Read Contacts History data from contacts when imported</string>

    <string name="setting_ui_theme">Night mode</string>
    <string name="setting_ui_theme_summary"></string>

    <string name="setting_ui_type">Compact interface</string>
    <string name="setting_ui_type_summary">Don\'t show Today, Week and Month tabs in main screen</string>

    <string name="setting_displaydate">Date format</string>
    <string name="setting_displaydate_summary">Pick date format</string>

    <string name="setting_displaytime">Time format</string>
    <string name="setting_displaytime_summary">Pick between 12/24h format</string>

    <string name="setting_recentnumber">Recent contacts</string>
    <string name="setting_recentnumber_summary">Choose the number of recent contacts to be displayed in "Recent" tab</string>

    <string name="setting_defaultsort">Default sorting</string>
    <string name="setting_defaultsort_summary">Choose the way contacts are sorted</string>


    <string name="setting_callinfo">Info about incoming call</string>
    <string name="setting_callinfo_summary">Show date and location info about incoming call contact.</string>


    <string name="setting_icon">Show notification</string>
    <string name="setting_icon_summary">Show notification when app service is running. This may help the service to keep running.</string>

    <string name="setting_icon_contact">Contact added</string>
    <string name="setting_icon_contact_summary">Show icon when new contact is created</string>

    <!-- Tutorial text -->

    <string name="tutorial_welcome">Welcome to\nContacts History</string>

    <string name="tutorial_accept">For this app to run correctly please make sure that:\n\n- All permissions are granted\n- The service of this app is not blocked by a task manger app or power saving mode.</string>

    <string name="tutorial_main">Contacts History allows you to search contacts by date and location where you meet them.\n\nPlease notice that this app is experimental and it may be buggy :)\n\nThis will work only for contacts stored from now on, since Android do not store this information by default.\n</string>

    <string name="tutorial_header1">How does this work ?</string>
    <string name="tutorial_header2">Obtaining location</string>
    <string name="tutorial_header3">Search by date</string>
    <string name="tutorial_header4">Search by location</string>

    <string name="tutorial_content1">Add people in your phone book using any contacts manager and after that new contacts will be displayed in Contacts History. This app is based on a service that need to run in background and if this service is closed then new contacts will not be detected. If you use some task manager app, please put Contacts History service on the whitelist.\n\nAlso, this app must be instaled on internal (system) memory.</string>
    <string name="tutorial_content2">Location is only from WiFi or mobile data carrier. GPS location is not available at this time.</string>
    <string name="tutorial_content3">Searching for contacts is available by choosing two dates and getting contacts stored between these two dates.</string>
    <string name="tutorial_content4">Use Location tab. Type address and get contacts stored at that location.</string>

    <string name="tutorial_ok_button">OK, I GOT IT</string>

    <!-- Date Util -->
    <string name="date_util_term_less" translatable="false">Less than</string>
    <string name="date_util_term_a" translatable="false">a</string>
    <string name="date_util_term_an" translatable="false">an</string>

    <string name="date_util_unit_second" translatable="false">second</string>
    <string name="date_util_unit_seconds" translatable="false">seconds</string>
    <string name="date_util_unit_minute" translatable="false">minute</string>
    <string name="date_util_unit_minutes" translatable="false">minutes</string>
    <string name="date_util_unit_hour" translatable="false">hour</string>
    <string name="date_util_unit_hours" translatable="false">hours</string>
    <string name="date_util_unit_day" translatable="false">day</string>
    <string name="date_util_unit_days" translatable="false">days</string>
    <string name="date_util_unit_month" translatable="false">month</string>
    <string name="date_util_unit_months" translatable="false">months</string>
    <string name="date_util_unit_year" translatable="false">year</string>
    <string name="date_util_unit_years" translatable="false">years</string>

    <string name="date_util_prefix_lt" translatable="false">Less than a</string>
    <string name="date_util_prefix_about" translatable="false">About</string>
    <string name="date_util_prefix_over" translatable="false">Over</string>
    <string name="date_util_prefix_almost" translatable="false">Almost</string>

    <string name="date_util_suffix" translatable="false">ago</string>

    <string name="eula" translatable="false">This software is provided to you FREE and on an AS IS basis, without any technical support or warranty of any kind.\n</string>
    <string name="notice" translatable="false">Please notice that this app is experimental and it may be buggy :)</string>
    <string name="ghub_text" translatable="false">Contacts History is on GitHub! Visit us at </string>
    <string name="ghub_link" translatable="false"><u>https://github.com/raducupop/contactshistory</u></string>

    <string name="snack_permissions_nok">You must allow all permissions.</string>

    <string name="do_not_show">Do not show again</string>


    <string name="library_1" translatable="false"><u>https://github.com/hdodenhof/CircleImageView</u></string>



</resources>