<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


	<item android:id="@+id/pref"
		android:title="@string/menu_settings"
		android:enabled="true"
		app:showAsAction="always"
		android:icon="@drawable/ic_action_settings" />


	<item android:id="@+id/search"
        android:title="@string/menu_search"
        android:enabled="true"
        android:icon="@drawable/ic_action_search" />


	<item  android:id="@+id/view_filter"
		   android:title="@string/menu_display"
	       android:enabled="true"
	       android:icon="@drawable/ic_action_labels" >

			<menu>

				    <item android:id="@+id/view_location"
						  android:title="@string/menu_display_withlocation"
						  android:enabled="true" />

				    <item android:id="@+id/view_all"
						  android:title="@string/menu_display_all"
						  android:enabled="true" />
		   
		   </menu>    

	</item>


    <item  android:id="@+id/sort_type"
           android:title="@string/menu_sort"
           android:enabled="true"
           android:icon="@drawable/ic_action_sort_by_size" >

        <menu>

            <item android:id="@+id/sort_name"
                android:title="@string/menu_sort_by_name"
                android:enabled="true" />

            <item android:id="@+id/sort_date"
                android:title="@string/menu_sort_by_date"
                android:enabled="true" />

            <item android:id="@+id/sort_location"
                android:title="@string/menu_sort_by_location"
                android:enabled="true" />

        </menu>


    </item>

    
    <item android:id="@+id/delete"
		  android:title="@string/menu_delete"
		  android:enabled="true"
		  android:icon="@drawable/ic_action_discard" />
    
    <item android:id="@+id/help"
		  android:title="@string/menu_help"
		  android:enabled="true"
		  android:icon="@drawable/ic_action_help" >


        <menu>

            <item android:id="@+id/help_tutorial"
                android:title="@string/menu_help_tutorial"
                android:enabled="true" />

            <item android:id="@+id/help_about"
                android:title="@string/menu_help_about"
                android:enabled="true" />

        </menu>


    </item>
    
</menu>