<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_search_box">

        <CheckBox
            android:id="@+id/selectall_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onCheckboxClicked"
            android:text="@string/rem_select_all"
            android:foreground="@color/ColorPrimary"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:layout_margin="7dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/background">

        <ListView
            android:id="@+id/list_remove"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@color/background"
            android:clickable="true"
            android:divider="@color/list_divider"
            android:dividerHeight="2px"
            android:drawSelectorOnTop="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/remove_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/remove_del_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/rem_delete" />

        <Button
            android:id="@+id/remove_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/rem_close" />
    </LinearLayout>

</LinearLayout>